RESOLVED FIXED63150
[UNIX] Increment/decrement module load conter in NetscapePluginModule::getPluginInfo()
https://bugs.webkit.org/show_bug.cgi?id=63150
Summary [UNIX] Increment/decrement module load conter in NetscapePluginModule::getPlu...
Carlos Garcia Campos
Reported 2011-06-22 09:54:29 PDT
Since the method is static, we are using NetscapePluginModule::getOrCreate() to get the module. If it's created, the load counter is 0, so that when module is deleted, shutdown() hasn't been called and the destructor crashes in the assert that checks the module has been removed from the initialized module list. We should increment the load counter, and decrement it before getPluginInfo() returns, so that decrementLoadCount() will call shutdown() if counter is 0 and the module will be deleted from the list.
Attachments
Patch (2.98 KB, patch)
2011-06-22 09:56 PDT, Carlos Garcia Campos
mrobinson: review+
Carlos Garcia Campos
Comment 1 2011-06-22 09:56:36 PDT
Carlos Garcia Campos
Comment 2 2011-06-22 23:47:14 PDT
Laszlo Gombos
Comment 3 2011-06-23 10:42:40 PDT
*** Bug 63184 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.